--- a/CSS/Admin/admin-login.css
+++ b/CSS/Admin/admin-login.css
@@ -1,7 +1,7 @@
 body {
     background-color: #F2FFEA;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -67,8 +67,13 @@ body {
             justify-content: center;
             align-items: center;
             
-            width: 850px;
-            height: 500px;
+            width: min(calc(100vw * 0.4427), 850px);
+            height: min(calc(100vw * 0.2604), 500px);
+            aspect-ratio: 1.7 / 1;
+
+            min-width: 400px;
+            min-height: 350px;
+
             border-radius: 10px;
     
             .login-form {
@@ -77,7 +82,8 @@ body {
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                gap: 30px;
+                gap: 20px;
+                margin-top: clamp(25px, 5vw, 0px);
 
                 .login-form-username, .login-form-password {
                     display: flex;
@@ -87,15 +93,24 @@ body {
 
                     color: #162D06;
 
+                    label {
+
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
+
+                        font-size: clamp(13px, 2.5vw, 20px);
+                    }
+
                     input {
                         background-color: white;
                         border-radius: 10px;
                         padding: 10px;
                         border: none;
-                        font-size: 12px;
+                        font-size: clamp(6px, 2.5vw, 12px);
 
                         color: #162D06;
                         font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
 
                         box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
                     }
@@ -105,26 +120,29 @@ body {
                     
                     font-family: "Libre Bodoni", serif;
 
-                    margin-top: 50px;
+                    margin-top: clamp(20px, 5vw, 50px);
                     background-color: #8DC892;
                     box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
                     border-radius: 25px;
-                    padding: 5px;
-                    border: none;
 
-                    width: 150px;
-                    height: 35px;
+                    padding: 5px;
+                    padding-left: 50px;
+                    padding-right: 50px;
+                    padding-top: 7px;
+                    padding-bottom: 7px;
+
+                    border: none;
 
                     color: #162D06;
                     font-weight: bold;
 
-                    font-size: 15px;
+                    font-size: clamp(9px, 2.5vw, 15px);
 
                     &:hover {
                         transform: scale(1.1);
                         transition: 0.25s;
 
-                        font-size: 17px;
+                        font-size: clamp(12px, 2.5vw, 17px);
                         cursor: pointer;
 
                         background-color: #a5eb77;
@@ -156,12 +174,12 @@ body {
 
                         font-family: "Libre Bodoni", serif;
 
-                        font-size: 14px;
+                        font-size: clamp(9px, 2.5vw, 15px);
 
                         i {
                             display: none;
                             margin-right: 7px;
-                            font-size: 13px;
+                            font-size: clamp(9px, 2.5vw, 15px);
                         }
                     }
 
