--- a/CSS/Admin/admin-page.css
+++ b/CSS/Admin/admin-page.css
@@ -40,136 +40,153 @@ body::before, body::after {
 
     .un-scroll-content {
 
-        position: sticky;
-
         overflow-x: hidden;
         overflow-y: hidden;
-    
         height: 100vh;
+        position: sticky;
+
+        z-index: 3;
+
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
         top: 0;
         right: 0;
-        left: 100%;
-        min-width: 300px;
-        width: 300px;
-        margin-right: 0px;
+        width: 250px;
+        min-width: 250px;
+
         background-color: #d5eac7;
+        transition: transform 0.5s ease;
 
         font-family: "libre Bodoni", serif;
     
         .right-s-content {
     
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             position: sticky;
+    
             display: flex;
             flex-direction: column;
-            top: 0;
-    
-            .right-s-background {
+            justify-content: center;
+            align-items: center;
 
-                position: sticky;
+        }
 
-                background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
-                background-size: 40%;
-                padding-bottom: 70px;
-                width: 300px;
-                height: 100vh;
+        .right-s-background {
+
+            background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+            background-size: 40%;
+            padding-bottom: 70px;
     
-                .right-s-box {
+            width: 100%;
+            height: 100%;
+    
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .right-s-box {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin-top: 0px;
+
+                .right-s-text {
+                    margin-top: 125px;
+                    background-color: #F2FFEA;
+            
                     display: flex;
                     flex-direction: column;
-                    justify-content: center;
                     align-items: center;
-                    margin-top: 120px;
-    
-                    .right-s-text {
-                        background-color: #F2FFEA;
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        border-radius: 10px;
-                        width: 250px;
+                    justify-content: center;
+            
+                    border-radius: 10px;
+                    width: 225px;
+            
+                    font-family: "Libre Bodoni", serif;
+                    font-weight: normal;
+            
+                    color: #162D06;
 
-                        font-family: "Libre Bodoni", serif;
-                        font-weight: normal;
+                    h2 {
+                        font-size: 22px;
+                    }
+                    
+                    img {
+                        width: 129px;
+                        height: 163px;
+                        object-fit: contain;
+                        background-color: white;
+                
+                        border-radius: 99px;
+                    }
 
+                    .admin-button {
+                        padding: 10px;
+                        border-radius: 99px;
+                        margin-top: 25px;
+                        text-decoration: none;
                         color: #162D06;
+                        font-weight: bold;
 
-                        h2 {
-                            text-align: center;
-                            font-size: 22px;
-                        }
-    
-                        img {
-                            width: 129px;
-                            height: 163px;
-                            object-fit: contain;
-                            background-color: white;
-                            border-radius: 99px;
-                        }
+                        width: 155px;
+                    }
 
-                        .admin-button {
-                            padding: 10px;
-                            border-radius: 99px;
-                            margin-top: 25px;
-                            text-decoration: none;
-                            color: #162D06;
+                    #create-button {
+                        background-color: #9AE5B5;
+                        font-size: 14px;
+                        text-align: center;
+
+                        &:hover {
+                            transform: scale(1.2);
+                            transition: 0.25s;
+
+                            background-color: #a5eb77;
+
+                            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                            background-size: 100%;
+
+                            color: white;
+                        }
+                    }
+
+                    #loggout-button {
+                        background-color: #EE4444;
+                        font-size: 14px;
+                        text-align: center;
+
+                        &:hover {
+                            transform: scale(1.2);
+                            transition: 0.25s;
+                            font-weight: bolder;
+
+                            background-color: #b42e2e;
+
+                            background-image: linear-gradient(to bottom, rgba(238, 68, 68, 0.75), rgba(238, 68, 68, 0.75)),url(/MEDIA/background/backgroundleafes.png);
+                            background-size: 125%;
+
+                            color: white;
+                        }
+                    }
+
+                    .right-s-info {
+                        margin-left: 30px;
+                        width: 100%;
+                        padding-bottom: 25px;
+                        margin-top: 210px;
+
+                        font-size: 15px;
+
+                        span {
                             font-weight: bold;
-
-                            width: 155px;
                         }
 
-                        #create-button {
-                            background-color: #9AE5B5;
-                            font-size: 14px;
-                            text-align: center;
-
-                            &:hover {
-                                transform: scale(1.2);
-                                transition: 0.25s;
-    
-                                background-color: #a5eb77;
-    
-                                background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
-                                background-size: 100%;
-    
-                                color: white;
-                            }
-                        }
-
-                        #loggout-button {
-                            background-color: #EE4444;
-                            font-size: 14px;
-                            text-align: center;
-
-                            &:hover {
-                                transform: scale(1.2);
-                                transition: 0.25s;
-                                font-weight: bolder;
-    
-                                background-color: #b42e2e;
-    
-                                background-image: linear-gradient(to bottom, rgba(238, 68, 68, 0.75), rgba(238, 68, 68, 0.75)),url(/MEDIA/background/backgroundleafes.png);
-                                background-size: 125%;
-    
-                                color: white;
-                            }
-                        }
-    
-                        .right-s-info {
-                            margin-left: 30px;
-                            width: 100%;
-                            padding-bottom: 25px;
-                            margin-top: 210px;
-    
-                            span {
-                                font-weight: bold;
-                            }
-
-                            #lastPosted, #totalPosts {
-                                font-weight: 400;
-                            }
+                        #lastPosted, #totalPosts {
+                            font-weight: 400;
                         }
                     }
                 }
@@ -177,17 +194,63 @@ body::before, body::after {
         }
     }
 
+    .toggle-icon {
+        position: sticky;
+        right: 0;
+
+        top: 50%;
+        transform: translateY(-50%);
+
+        background-color: #d5eac7;
+        color: #162D06;
+        border-radius: 35% 0% 0% 35%;
+        cursor: pointer;
+
+        height: 50px;
+        padding-right: 7px;
+        padding-left: 10px;
+        margin-top: 25px;
+
+        display: none;
+        z-index: 2;
+        font-size: 20px;
+
+        &:hover {
+            transition: 0.2s ease;
+
+            padding-right: 12px;
+            background-color: #F39994;
+        }
+    }
+
+    .un-scroll-content-active {
+        transform: translateX(0);
+        z-index: 3;
+    }
+
     .scroll-content {
+
+        z-index: 2;
+        position: relative;
 
         display: flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
 
         width: 100%;
-        margin-left: 2.5%;
-        margin-right: 2.5%;
+
+        top: 0;
+        right: 0;
+
+        margin-bottom: 10px;
+        transition: width 0.5s ease;
 
         font-family: "Libre Bodoni", serif;
+
+        h1 {
+            margin-left: 1000000%;
+        }
 
         .searchbar {
             margin-top: 75px;
@@ -239,33 +302,41 @@ body::before, body::after {
     
         .all-blogs {
 
+            width: 100%;
+            color: #162D06;
+
+            margin-left: 7%;
+            margin-right: 7%;
+
+            font-family: "Libre Bodoni", serif;
+            font-weight: normal;
+
             margin-top: 75px;
             margin-bottom: 150px;
-            margin-left: 7%;
-            margin-right: 25px;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
 
             gap: 25px;
-
-            font-family: "Libre Bodoni", serif;
-            font-weight: normal;
     
             .blog-post {
                 background-color: #F1F8F3;
                 height: 500px;
                 
-                width: calc((100% - 50px) / 2);
-                max-width: 275px;
-                min-width: 250px;
+                height: calc((100vw * 0.35) * 375 / 350);
+                width: calc((100vw * 0.4) / 1.9);
+                min-width: 200px;
+                min-height: 280px;
+
+                max-height: 525px;
+                max-width: 300px;
 
                 border-radius: 10px;
                 box-shadow: 2px 2px 7px 2px rgba(2, 57, 11, 0.306);
     
                 img {
-                    height: 300px;
+                    height: 62%;
                     width: 100%;
                     object-fit: cover;
                     border-radius: 10px 10px 0px 0px;
@@ -277,15 +348,16 @@ body::before, body::after {
                     justify-content: space-between;
                     align-items: center;
 
-                    height: 180px;
+                    height: 38%;
                     margin-left: 5px;
                     margin-right: 5px;
     
                     .main-title {
                         font-weight: bold;
-                        font-size: 19px;
+                        font-size: clamp(10px, calc(1vw + 0.7vh), 22px);                        
                         display: flex;
                         width: 99%;
+                        margin-top: -15px;
 
                         justify-content: center;
                         align-items: center;
@@ -295,31 +367,7 @@ body::before, body::after {
                     .published {
                         opacity: 75%;
                         font-size: 10px;
-                    }
-                }
-            }
-    
-            .blog-post:hover {
-                background-color: white;
-                transition: 0.25s;
-    
-                img {
-                    height: 375px;
-                    transition: ease-in-out 0.25s;
-                }
-    
-                .post-textbox {
-                    transition: 0.25s;
-                    height: 100px;
-                    margin-top: 0px;
-    
-                    .title {
-                        font-size: 23px;
-                        margin-top: -1px;
-                    }
-    
-                    .published {
-                        display: none;
+                        margin-top: -25px;
                     }
                 }
             }
@@ -328,10 +376,10 @@ body::before, body::after {
             .blog-post:hover {
                 background-color: white;
                 transition: 0.25s;
-            
+    
                 img {
-                    height: 400px;
-                    transition: ease-in-out 0.25s;
+                    height: 70%;
+                    transition: 0.25s;
                 }
             
                 .post-textbox {
@@ -377,6 +425,68 @@ body::before, body::after {
 
 }
 
+@media (max-width: 1300px){
+    .main-content {
+    
+        .un-scroll-content {
+    
+            width: 205px;
+            min-width: 205px;
+
+            .right-s-content {
+        
+                .right-s-background {
+        
+                    .right-s-box {
+                        width: 195px;
+        
+                        .right-s-text {
+                            width: 180px;
+    
+                            h2 {
+                                font-size: 20px;
+                            }
+    
+                            img {
+                                width: 102px;
+                                height: 130px;
+                            }
+        
+                            p {
+                                margin-left: 5px;
+                                margin-right: 5px;
+                                font-size: 13px;
+                            }
+
+                            .admin-button {        
+                                width: 105px;
+                            }
+        
+                            #create-button {
+                                font-size: 12px;
+        
+                                &:hover {
+                                    transform: scale(1.1);
+                                }
+                            }
+        
+                            #loggout-button {
+                                font-size: 13px;
+        
+                                &:hover {
+                                    transform: scale(1.2);
+                                }
+                            }
+
+                        }
+                    }
+                }
+            }
+        }
+    
+    }
+}
+
 @media (max-width: 1100px){
 
     .main-content {
@@ -384,8 +494,14 @@ body::before, body::after {
         .un-scroll-content {
             transform: translateX(100%); 
             transition: transform 0.4s ease;
-            width: 250px;
+
+            width: 205px;
+            min-width: 205px;
+
             z-index: 998;
+
+            margin-top: 0px;
+
         }
 
         .un-scroll-content-active {
@@ -404,18 +520,104 @@ body::before, body::after {
         }
     
         .scroll-content {
+
+            margin-left: 7%;
+            margin-right: 5%;
+
+            max-width: 1100px;
+            min-width: 900px;
+            width: 100%;
+
+        }
     
-            .newly-posted-container {
-        
-                .next-right-newly {
-                    right: 2.5%;
-                }
+    }
+}
+
+@media (max-width: 1000px){
+
+    .main-content {
     
-                .next-left-newly {
-                    left: 2.5%;
-                }
+        .scroll-content {
+
+            margin-left: 7%;
+            margin-right: 5%;
+
+            max-width: 100px;
+            min-width: 800px;
+            width: 100%;
+
+        }
     
-            }
+    }
+}
+
+@media (max-width: 900px){
+
+    .main-content {
+    
+        .scroll-content {
+
+            margin-left: 7%;
+            margin-right: 5%;
+
+            max-width: 900px;
+            min-width: 700px;
+            width: 100%;
+
+        }
+    
+    }
+}
+
+@media (max-width: 800px){
+
+    .main-content {
+    
+        .scroll-content {
+            margin-left: 2%;
+
+            max-width: 700px;
+            min-width: none;
+            width: 90%;
+
+        }
+    
+    }
+}
+
+@media (max-width: 800px){
+
+    .main-content {
+
+        width: 100%;
+    
+        .scroll-content {
+
+            margin-left: 7%;
+            margin-right: 7%;
+
+            max-width: 750px;
+            min-width: 650px;
+            width: 100%;
+
+        }
+    
+    }
+}
+
+@media (max-width: 750px){
+
+    .main-content {
+
+        width: 100%;
+    
+        .scroll-content {
+
+            margin-left: 15%;
+
+            max-width: 650px;
+            min-width: 450px;
+            width: 100%;
 
         }
     
