--- a/CSS/Admin/blog-post.css
+++ b/CSS/Admin/blog-post.css
@@ -32,91 +32,112 @@ body::before, body::after {
 
 .main-content {
 
-    font-family: "Libre Bodoni", serif;
+    position: relative;
 
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    padding: 0;
+    margin: 0;
 
     background-color: #F2FFEA;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+
+    font-family: "Libre Bodoni", serif;
 
     .un-scroll-content {
 
         overflow-x: hidden;
         overflow-y: hidden;
-    
         height: 100vh;
         position: sticky;
+
+        z-index: 3;
+
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
         top: 0;
         right: 0;
-        left: 100%;
-        min-width: 300px;
-        margin-right: 0px;
+        width: 250px;
+        min-width: 250px;
+
         background-color: #d5eac7;
+        transition: transform 0.5s ease;
     
         .right-s-content {
     
+            width: 100%;
             height: 100vh;
             position: sticky;
             display: flex;
             flex-direction: column;
-            top: 0;
+            justify-content: center;
+            align-items: center;
     
             .right-s-background {
                 background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                 background-size: 40%;
                 padding-bottom: 70px;
-                height: 100vh;
-                width: 300px;
+                width: 100%;
+                height: 100%;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
 
                 .gobackbutton {
-                    margin-top: 120px;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    width: 250px;
-                    margin-left: 25px;
-                    margin-bottom: 15px;
 
+                    width: 250px;
+
+                    margin-top: 90px;
+    
                     a {
                         padding: 7px;
                         padding-right: 10px; 
                         padding-left: 10px;
                         background-color: #F39994;
-                        border-radius: 99px;
-
+                        border-radius: 25px;
+    
                         color: #162D06;
                         text-decoration: none;
                         font-weight: bold;
-
+    
                         font-size: 14px;
-
+                        font-family: "Libre Bodoni", serif;
+    
                         i {
                             display: none;
                             margin-right: 7px;
                             font-size: 13px;
                         }
                     }
-
+    
                     &:hover {
                         a {
                             transform: scale(1.2);
                             transition: 0.25s;
-
+    
                             background-color: #a5eb77;
-
-                            background-image: linear-gradient(to bottom, rgba(62, 93, 42, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+    
+                            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                             background-size: 200%;
-
+    
                             color: white;
                         } 
-
+    
                         i {
                             display: inline;
-                            margin-right: 0px;
                         }
                     }
                 }
@@ -126,20 +147,60 @@ body::before, body::after {
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    margin-top: 10px;
+                    margin-top: 40px;
     
                     .right-s-text {
                         background-color: #F2FFEA;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
-                        justify-content: space-between;
+                        justify-content: center;
+
                         border-radius: 10px;
-                        width: 250px;
-                        min-height: 500px;
-                        margin-top: 25px;
+                        width: 225px;
+
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
+
+                        color: #162D06;
+
+                        h2 {
+                            font-size: 22px;
+                        }
+
+                        img {
+                            width: 129px;
+                            height: 163px;
+                            object-fit: contain;
+                            background-color: white;
+                            border-radius: 99px;
+                        }
+    
+                        p {
+                            margin-bottom: 0px;
+                            margin-top: 10px;
+                            margin-left: 10px;
+                            margin-right: 10px;
+                            font-size: 13px;
+                        }
+    
+                        .right-s-info {
+                            width: 100%;
+                            padding-bottom: 25px;
+                            margin-top: 210px;
+    
+                            span {
+                                font-weight: bold;
+                            }
+                        }
 
                         .blog-post-buttons {
+
+                            display: flex;
+                            flex-direction: column;
+                            gap: 15px;
+                            margin-top: 25px;
+                            width: 150px;
 
                             .save-button {
                                 background-color: #9AE5B5;
@@ -147,7 +208,6 @@ body::before, body::after {
                                 border: none;
 
                                 height: 35px;
-                                width: 150px;
                                 font-size: 15px;
 
                                 cursor: pointer;
@@ -155,6 +215,9 @@ body::before, body::after {
                                 font-weight: bold;
                                 font-family: "Libre Bodoni", serif;
 
+                                font-size: 14px;
+                                text-align: center;
+        
                                 &:hover {
                                     transform: scale(1.1);
                                     transition: 0.25s;
@@ -167,23 +230,24 @@ body::before, body::after {
                                     color: white;
                                 }
                             }
+                            
                             .delete-button {
                                 background-color: #EE4444;
                                 border-radius: 99px;
                                 border: none;
 
                                 height: 35px;
-                                width: 150px;
-                                font-size: 15px;
 
                                 cursor: pointer;
 
                                 font-weight: bold;
                                 font-family: "Libre Bodoni", serif;
 
+                                font-size: 14px;
+                                text-align: center;
+        
                                 &:hover {
                                     transform: scale(1.1);
-
                                     transition: 0.25s;
                                     font-weight: bolder;
         
@@ -196,74 +260,88 @@ body::before, body::after {
                                 }
                             }
                         }
-
-                        h2 {
-                            margin-bottom: -50px;
-                        }
-
-                        .blog-post-buttons {
-                            display: flex;
-                            flex-direction: column;
-                            gap: 15px;
-                        }
-    
-                        img {
-                            width: 129px;
-                            height: 163px;
-                            object-fit: contain;
-                            background-color: white;
-                            border-radius: 99px;
-                            margin-top: 0px;
-                        }
-    
-                        p {
-                            margin-bottom: 0px;
-                            margin-top: 10px;
-                            margin-left: 10px;
-                            margin-right: 5px;
-                            font-size: 15px;
-                        }
-    
-                        .right-s-info {
-                            width: 100%;
-                            padding-bottom: 25px;
-                            margin-top: 25px;
-    
-                            #lastPosted, #totalPosts {
-                                font-weight: 400;
-                            }
-                            
-                            span {
-                                font-weight: bold;
-                            }
-                        }
                     }
                 }
             }
         }
     }
 
+    .toggle-icon {
+        position: fixed;
+        right: 0;
+
+        top: 50%;
+        transform: translateY(-50%);
+
+        background-color: #d5eac7;
+        color: #162D06;
+        border-radius: 35% 0% 0% 35%;
+        cursor: pointer;
+
+        height: 50px;
+        padding-right: 7px;
+        padding-left: 10px;
+        margin-top: 25px;
+
+        display: none;
+        z-index: 2;
+        font-size: 20px;
+
+        &:hover {
+            transition: 0.2s ease;
+
+            padding-right: 12px;
+            background-color: #F39994;
+        }
+    }
+
+    .un-scroll-content-active {
+        transform: translateX(0);
+        z-index: 3;
+    }
+
     .scroll-content {
+
+        z-index: 2;
+        position: relative;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
         width: 100%;
-        margin-bottom: 100px;
-        margin-left: -8px;
-        margin-top: -8px;
+
+        top: 0;
+        right: 0;
+
+        margin-bottom: 150px;
+        transition: width 0.5s ease;
+
+        h1 {
+            margin-bottom: 500000px;
+            position: absolute;
+        }
 
         .admin-blog-detail {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 100px;
+            position: relative;
+            width: 100%;
+            margin-bottom: 150px;
 
             .title-container, .body-container, .tags-container {
-                margin-left: 9%;
-                margin-right: 3.5%;
 
                 h3 {
+                    margin-left: 9%;
+                    margin-right: 3.5%;
+
                     font-size: 30px;
                     font-family: "Libre Bodoni", serif;
                 }
 
                 input {
+                    margin-left: 9%;
+                    margin-right: 3.5%;
+
                     width: 100%;
                     border-radius: 25px;
                     border: solid 1px #162D06;
@@ -278,6 +356,12 @@ body::before, body::after {
             }
 
             .media-container {
+
+                width: 100%;
+                min-width: 100%;
+
+                margin: 0px;
+                padding: 0px;
 
                 h3 {
                     margin-left: 9%;
@@ -301,19 +385,19 @@ body::before, body::after {
 
                 .image-preview {
                     width: 100%;
-                    margin-left: 0px;
-                    margin-right: 0px;
-                    height: 555px;
-                    margin-top: 0px;
-    
+                    min-width: 100%;
+
+                    margin: 0px;
+                    padding: 0px;
+
+                    height: 645px;
                 }
     
                 img {
                     width: 100%;
-                    height: 100%;
+                    min-width: 100%;
+                    height: 645px;
                     object-fit: cover;
-                    border-radius: 0px;
-                    margin-top: 25px;
                 }
             }
 
@@ -326,8 +410,12 @@ body::before, body::after {
                 margin-bottom: 50px;
 
                 .edit-textarea {
+
+                    margin-left: 9%;
+                    margin-right: 3.5%;
+
                     height: 450px;
-                    width: 100%;
+                    width: 85%;
 
                     border-radius: 25px;
                     border: solid 1px #162D06;
@@ -340,5 +428,118 @@ body::before, body::after {
             }
         }
     }
+}
 
+
+
+@media (max-width: 1300px){
+    .main-content {
+    
+        .un-scroll-content {
+    
+            width: 205px;
+            min-width: 205px;
+
+            .right-s-content {
+        
+                .right-s-background {
+        
+                    .right-s-box {
+                        width: 195px;
+        
+                        .right-s-text {
+                            width: 180px;
+    
+                            h2 {
+                                font-size: 20px;
+                            }
+    
+                            img {
+                                width: 102px;
+                                height: 130px;
+                            }
+        
+                            p {
+                                margin-left: 5px;
+                                margin-right: 5px;
+                                font-size: 13px;
+                            }
+
+                            .blog-post-buttons {
+
+                                width: 120px;
+    
+                                .save-button {
+
+                                    font-size: 12px;
+                                    width: 120px;
+                                }
+                                
+                                .delete-button {
+
+                                    width: 120px;
+                                    font-size: 12px;
+                                }
+                            }
+
+                        }
+                    }
+                }
+            }
+        }
+    
+    }
+}
+
+@media (max-width: 1100px){
+
+    .main-content {
+        
+        .un-scroll-content {
+            transform: translateX(100%); 
+            transition: transform 0.4s ease;
+
+            width: 205px;
+            min-width: 205px;
+
+            z-index: 998;
+
+            margin-top: 0px;
+
+        }
+
+        .un-scroll-content-active {
+            transform: translateX(0%); 
+            transition: transform 0.4s ease;
+            width: 205px;
+        }
+
+        .toggle-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            right: 0px;
+
+            transition: right 0.1s ease;
+        }
+    
+        .scroll-content {
+
+            max-width: 1100px;
+            width: 100%;
+
+            .admin-blog-detail {
+
+                .media-container {
+    
+                    .image-preview {
+                        width: 130%;
+                    }
+                }
+
+            }
+
+        }
+    
+    }
 }
