--- a/CSS/Admin/admin-page.css
+++ b/CSS/Admin/admin-page.css
@@ -228,6 +228,12 @@ body::before, body::after {
         z-index: 3;
     }
 
+    .blur {
+        filter: blur(5px);
+        transition: filter 0.3s ease;;
+    }
+
+
     .scroll-content {
 
         z-index: 2;
@@ -243,10 +249,8 @@ body::before, body::after {
         top: 0;
         right: 0;
 
-        margin-bottom: 10px;
+        margin-bottom: 150px;
         transition: width 0.5s ease;
-
-        font-family: "Libre Bodoni", serif;
 
         h1 {
             margin-left: 1000000%;
@@ -305,14 +309,13 @@ body::before, body::after {
             width: 100%;
             color: #162D06;
 
-            margin-left: 7%;
-            margin-right: 7%;
-
             font-family: "Libre Bodoni", serif;
             font-weight: normal;
 
             margin-top: 75px;
             margin-bottom: 150px;
+            margin-left: 7%;
+            margin-right: 7%;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
