--- a/CSS/Admin/blog-post.css
+++ b/CSS/Admin/blog-post.css
@@ -286,6 +286,7 @@ body::before, body::after {
         display: none;
         z-index: 2;
         font-size: 20px;
+        transition: right 0.3s ease-in-out;
 
         &:hover {
             transition: 0.2s ease;
@@ -298,6 +299,11 @@ body::before, body::after {
     .un-scroll-content-active {
         transform: translateX(0);
         z-index: 3;
+    }
+
+    .blur {
+        filter: blur(5px);
+        transition: filter 0.3s ease;;
     }
 
     .scroll-content {
