--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -310,6 +310,11 @@ body::before, body::after {
         z-index: 3;
     }
 
+    .blur {
+        filter: blur(5px);
+        transition: filter 0.3s ease;;
+    }
+
     .scroll-content {
         z-index: 2;
         position: relative;
@@ -327,6 +332,7 @@ body::before, body::after {
         margin-bottom: 150px;
         margin-top: 100px;
         transition: width 0.5s ease;
+        
 
         h1 {
             font-size: clamp(35px, 7vw, 75px);  
