made sure the users wont click on the admin login

--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -249,6 +249,7 @@ body::before, body::after {
                         background-color: white;
                 
                         border-radius: 99px;
+                        cursor: default;
                     }
                     
                     p {
