--- a/CSS/index.css
+++ b/CSS/index.css
@@ -394,6 +394,7 @@ For the carousel, I used w3schools.com for some help and inspiration, link: http
                         background-color: white;
                 
                         border-radius: 99px;
+                        cursor: default;
                     }
                     
                     p {
